docs/upbound-provider-aws/1.6/opsworks/v1beta1/application.md
---
permalink: /upbound-provider-aws/1.6/opsworks/v1beta1/application/
---

# opsworks.v1beta1.application

"Application is the Schema for the Applications API. Provides an OpsWorks application resource."

## Index

* [`fn new(name)`](#fn-new)
* [`obj metadata`](#obj-metadata)
  * [`fn withAnnotations(annotations)`](#fn-metadatawithannotations)
  * [`fn withAnnotationsMixin(annotations)`](#fn-metadatawithannotationsmixin)
  * [`fn withClusterName(clusterName)`](#fn-metadatawithclustername)
  * [`fn withCreationTimestamp(creationTimestamp)`](#fn-metadatawithcreationtimestamp)
  * [`fn withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)`](#fn-metadatawithdeletiongraceperiodseconds)
  * [`fn withDeletionTimestamp(deletionTimestamp)`](#fn-metadatawithdeletiontimestamp)
  * [`fn withFinalizers(finalizers)`](#fn-metadatawithfinalizers)
  * [`fn withFinalizersMixin(finalizers)`](#fn-metadatawithfinalizersmixin)
  * [`fn withGenerateName(generateName)`](#fn-metadatawithgeneratename)
  * [`fn withGeneration(generation)`](#fn-metadatawithgeneration)
  * [`fn withLabels(labels)`](#fn-metadatawithlabels)
  * [`fn withLabelsMixin(labels)`](#fn-metadatawithlabelsmixin)
  * [`fn withName(name)`](#fn-metadatawithname)
  * [`fn withNamespace(namespace)`](#fn-metadatawithnamespace)
  * [`fn withOwnerReferences(ownerReferences)`](#fn-metadatawithownerreferences)
  * [`fn withOwnerReferencesMixin(ownerReferences)`](#fn-metadatawithownerreferencesmixin)
  * [`fn withResourceVersion(resourceVersion)`](#fn-metadatawithresourceversion)
  * [`fn withSelfLink(selfLink)`](#fn-metadatawithselflink)
  * [`fn withUid(uid)`](#fn-metadatawithuid)
* [`obj spec`](#obj-spec)
  * [`fn withDeletionPolicy(deletionPolicy)`](#fn-specwithdeletionpolicy)
  * [`fn withManagementPolicies(managementPolicies)`](#fn-specwithmanagementpolicies)
  * [`fn withManagementPoliciesMixin(managementPolicies)`](#fn-specwithmanagementpoliciesmixin)
  * [`obj spec.forProvider`](#obj-specforprovider)
    * [`fn withAppSource(appSource)`](#fn-specforproviderwithappsource)
    * [`fn withAppSourceMixin(appSource)`](#fn-specforproviderwithappsourcemixin)
    * [`fn withAutoBundleOnDeploy(autoBundleOnDeploy)`](#fn-specforproviderwithautobundleondeploy)
    * [`fn withAwsFlowRubySettings(awsFlowRubySettings)`](#fn-specforproviderwithawsflowrubysettings)
    * [`fn withDataSourceArn(dataSourceArn)`](#fn-specforproviderwithdatasourcearn)
    * [`fn withDataSourceDatabaseName(dataSourceDatabaseName)`](#fn-specforproviderwithdatasourcedatabasename)
    * [`fn withDataSourceType(dataSourceType)`](#fn-specforproviderwithdatasourcetype)
    * [`fn withDescription(description)`](#fn-specforproviderwithdescription)
    * [`fn withDocumentRoot(documentRoot)`](#fn-specforproviderwithdocumentroot)
    * [`fn withDomains(domains)`](#fn-specforproviderwithdomains)
    * [`fn withDomainsMixin(domains)`](#fn-specforproviderwithdomainsmixin)
    * [`fn withEnableSsl(enableSsl)`](#fn-specforproviderwithenablessl)
    * [`fn withEnvironment(environment)`](#fn-specforproviderwithenvironment)
    * [`fn withEnvironmentMixin(environment)`](#fn-specforproviderwithenvironmentmixin)
    * [`fn withName(name)`](#fn-specforproviderwithname)
    * [`fn withRailsEnv(railsEnv)`](#fn-specforproviderwithrailsenv)
    * [`fn withShortName(shortName)`](#fn-specforproviderwithshortname)
    * [`fn withSslConfiguration(sslConfiguration)`](#fn-specforproviderwithsslconfiguration)
    * [`fn withSslConfigurationMixin(sslConfiguration)`](#fn-specforproviderwithsslconfigurationmixin)
    * [`fn withStackId(stackId)`](#fn-specforproviderwithstackid)
    * [`fn withType(type)`](#fn-specforproviderwithtype)
    * [`obj spec.forProvider.appSource`](#obj-specforproviderappsource)
      * [`fn withRevision(revision)`](#fn-specforproviderappsourcewithrevision)
      * [`fn withType(type)`](#fn-specforproviderappsourcewithtype)
      * [`fn withUrl(url)`](#fn-specforproviderappsourcewithurl)
      * [`fn withUsername(username)`](#fn-specforproviderappsourcewithusername)
      * [`obj spec.forProvider.appSource.passwordSecretRef`](#obj-specforproviderappsourcepasswordsecretref)
        * [`fn withKey(key)`](#fn-specforproviderappsourcepasswordsecretrefwithkey)
        * [`fn withName(name)`](#fn-specforproviderappsourcepasswordsecretrefwithname)
        * [`fn withNamespace(namespace)`](#fn-specforproviderappsourcepasswordsecretrefwithnamespace)
      * [`obj spec.forProvider.appSource.sshKeySecretRef`](#obj-specforproviderappsourcesshkeysecretref)
        * [`fn withKey(key)`](#fn-specforproviderappsourcesshkeysecretrefwithkey)
        * [`fn withName(name)`](#fn-specforproviderappsourcesshkeysecretrefwithname)
        * [`fn withNamespace(namespace)`](#fn-specforproviderappsourcesshkeysecretrefwithnamespace)
    * [`obj spec.forProvider.environment`](#obj-specforproviderenvironment)
      * [`fn withKey(key)`](#fn-specforproviderenvironmentwithkey)
      * [`fn withSecure(secure)`](#fn-specforproviderenvironmentwithsecure)
      * [`fn withValue(value)`](#fn-specforproviderenvironmentwithvalue)
    * [`obj spec.forProvider.sslConfiguration`](#obj-specforprovidersslconfiguration)
      * [`fn withCertificate(certificate)`](#fn-specforprovidersslconfigurationwithcertificate)
      * [`fn withChain(chain)`](#fn-specforprovidersslconfigurationwithchain)
      * [`obj spec.forProvider.sslConfiguration.privateKeySecretRef`](#obj-specforprovidersslconfigurationprivatekeysecretref)
        * [`fn withKey(key)`](#fn-specforprovidersslconfigurationprivatekeysecretrefwithkey)
        * [`fn withName(name)`](#fn-specforprovidersslconfigurationprivatekeysecretrefwithname)
        * [`fn withNamespace(namespace)`](#fn-specforprovidersslconfigurationprivatekeysecretrefwithnamespace)
    * [`obj spec.forProvider.stackIdRef`](#obj-specforproviderstackidref)
      * [`fn withName(name)`](#fn-specforproviderstackidrefwithname)
      * [`obj spec.forProvider.stackIdRef.policy`](#obj-specforproviderstackidrefpolicy)
        * [`fn withResolution(resolution)`](#fn-specforproviderstackidrefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specforproviderstackidrefpolicywithresolve)
    * [`obj spec.forProvider.stackIdSelector`](#obj-specforproviderstackidselector)
      * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specforproviderstackidselectorwithmatchcontrollerref)
      * [`fn withMatchLabels(matchLabels)`](#fn-specforproviderstackidselectorwithmatchlabels)
      * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specforproviderstackidselectorwithmatchlabelsmixin)
      * [`obj spec.forProvider.stackIdSelector.policy`](#obj-specforproviderstackidselectorpolicy)
        * [`fn withResolution(resolution)`](#fn-specforproviderstackidselectorpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specforproviderstackidselectorpolicywithresolve)
  * [`obj spec.initProvider`](#obj-specinitprovider)
    * [`fn withAppSource(appSource)`](#fn-specinitproviderwithappsource)
    * [`fn withAppSourceMixin(appSource)`](#fn-specinitproviderwithappsourcemixin)
    * [`fn withAutoBundleOnDeploy(autoBundleOnDeploy)`](#fn-specinitproviderwithautobundleondeploy)
    * [`fn withAwsFlowRubySettings(awsFlowRubySettings)`](#fn-specinitproviderwithawsflowrubysettings)
    * [`fn withDataSourceArn(dataSourceArn)`](#fn-specinitproviderwithdatasourcearn)
    * [`fn withDataSourceDatabaseName(dataSourceDatabaseName)`](#fn-specinitproviderwithdatasourcedatabasename)
    * [`fn withDataSourceType(dataSourceType)`](#fn-specinitproviderwithdatasourcetype)
    * [`fn withDescription(description)`](#fn-specinitproviderwithdescription)
    * [`fn withDocumentRoot(documentRoot)`](#fn-specinitproviderwithdocumentroot)
    * [`fn withDomains(domains)`](#fn-specinitproviderwithdomains)
    * [`fn withDomainsMixin(domains)`](#fn-specinitproviderwithdomainsmixin)
    * [`fn withEnableSsl(enableSsl)`](#fn-specinitproviderwithenablessl)
    * [`fn withEnvironment(environment)`](#fn-specinitproviderwithenvironment)
    * [`fn withEnvironmentMixin(environment)`](#fn-specinitproviderwithenvironmentmixin)
    * [`fn withName(name)`](#fn-specinitproviderwithname)
    * [`fn withRailsEnv(railsEnv)`](#fn-specinitproviderwithrailsenv)
    * [`fn withShortName(shortName)`](#fn-specinitproviderwithshortname)
    * [`fn withSslConfiguration(sslConfiguration)`](#fn-specinitproviderwithsslconfiguration)
    * [`fn withSslConfigurationMixin(sslConfiguration)`](#fn-specinitproviderwithsslconfigurationmixin)
    * [`fn withStackId(stackId)`](#fn-specinitproviderwithstackid)
    * [`fn withType(type)`](#fn-specinitproviderwithtype)
    * [`obj spec.initProvider.appSource`](#obj-specinitproviderappsource)
      * [`fn withRevision(revision)`](#fn-specinitproviderappsourcewithrevision)
      * [`fn withType(type)`](#fn-specinitproviderappsourcewithtype)
      * [`fn withUrl(url)`](#fn-specinitproviderappsourcewithurl)
      * [`fn withUsername(username)`](#fn-specinitproviderappsourcewithusername)
      * [`obj spec.initProvider.appSource.passwordSecretRef`](#obj-specinitproviderappsourcepasswordsecretref)
        * [`fn withKey(key)`](#fn-specinitproviderappsourcepasswordsecretrefwithkey)
        * [`fn withName(name)`](#fn-specinitproviderappsourcepasswordsecretrefwithname)
        * [`fn withNamespace(namespace)`](#fn-specinitproviderappsourcepasswordsecretrefwithnamespace)
      * [`obj spec.initProvider.appSource.sshKeySecretRef`](#obj-specinitproviderappsourcesshkeysecretref)
        * [`fn withKey(key)`](#fn-specinitproviderappsourcesshkeysecretrefwithkey)
        * [`fn withName(name)`](#fn-specinitproviderappsourcesshkeysecretrefwithname)
        * [`fn withNamespace(namespace)`](#fn-specinitproviderappsourcesshkeysecretrefwithnamespace)
    * [`obj spec.initProvider.environment`](#obj-specinitproviderenvironment)
      * [`fn withKey(key)`](#fn-specinitproviderenvironmentwithkey)
      * [`fn withSecure(secure)`](#fn-specinitproviderenvironmentwithsecure)
      * [`fn withValue(value)`](#fn-specinitproviderenvironmentwithvalue)
    * [`obj spec.initProvider.sslConfiguration`](#obj-specinitprovidersslconfiguration)
      * [`fn withCertificate(certificate)`](#fn-specinitprovidersslconfigurationwithcertificate)
      * [`fn withChain(chain)`](#fn-specinitprovidersslconfigurationwithchain)
      * [`obj spec.initProvider.sslConfiguration.privateKeySecretRef`](#obj-specinitprovidersslconfigurationprivatekeysecretref)
        * [`fn withKey(key)`](#fn-specinitprovidersslconfigurationprivatekeysecretrefwithkey)
        * [`fn withName(name)`](#fn-specinitprovidersslconfigurationprivatekeysecretrefwithname)
        * [`fn withNamespace(namespace)`](#fn-specinitprovidersslconfigurationprivatekeysecretrefwithnamespace)
    * [`obj spec.initProvider.stackIdRef`](#obj-specinitproviderstackidref)
      * [`fn withName(name)`](#fn-specinitproviderstackidrefwithname)
      * [`obj spec.initProvider.stackIdRef.policy`](#obj-specinitproviderstackidrefpolicy)
        * [`fn withResolution(resolution)`](#fn-specinitproviderstackidrefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specinitproviderstackidrefpolicywithresolve)
    * [`obj spec.initProvider.stackIdSelector`](#obj-specinitproviderstackidselector)
      * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specinitproviderstackidselectorwithmatchcontrollerref)
      * [`fn withMatchLabels(matchLabels)`](#fn-specinitproviderstackidselectorwithmatchlabels)
      * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specinitproviderstackidselectorwithmatchlabelsmixin)
      * [`obj spec.initProvider.stackIdSelector.policy`](#obj-specinitproviderstackidselectorpolicy)
        * [`fn withResolution(resolution)`](#fn-specinitproviderstackidselectorpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specinitproviderstackidselectorpolicywithresolve)
  * [`obj spec.providerConfigRef`](#obj-specproviderconfigref)
    * [`fn withName(name)`](#fn-specproviderconfigrefwithname)
    * [`obj spec.providerConfigRef.policy`](#obj-specproviderconfigrefpolicy)
      * [`fn withResolution(resolution)`](#fn-specproviderconfigrefpolicywithresolution)
      * [`fn withResolve(resolve)`](#fn-specproviderconfigrefpolicywithresolve)
  * [`obj spec.publishConnectionDetailsTo`](#obj-specpublishconnectiondetailsto)
    * [`fn withName(name)`](#fn-specpublishconnectiondetailstowithname)
    * [`obj spec.publishConnectionDetailsTo.configRef`](#obj-specpublishconnectiondetailstoconfigref)
      * [`fn withName(name)`](#fn-specpublishconnectiondetailstoconfigrefwithname)
      * [`obj spec.publishConnectionDetailsTo.configRef.policy`](#obj-specpublishconnectiondetailstoconfigrefpolicy)
        * [`fn withResolution(resolution)`](#fn-specpublishconnectiondetailstoconfigrefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specpublishconnectiondetailstoconfigrefpolicywithresolve)
    * [`obj spec.publishConnectionDetailsTo.metadata`](#obj-specpublishconnectiondetailstometadata)
      * [`fn withAnnotations(annotations)`](#fn-specpublishconnectiondetailstometadatawithannotations)
      * [`fn withAnnotationsMixin(annotations)`](#fn-specpublishconnectiondetailstometadatawithannotationsmixin)
      * [`fn withLabels(labels)`](#fn-specpublishconnectiondetailstometadatawithlabels)
      * [`fn withLabelsMixin(labels)`](#fn-specpublishconnectiondetailstometadatawithlabelsmixin)
      * [`fn withType(type)`](#fn-specpublishconnectiondetailstometadatawithtype)
  * [`obj spec.writeConnectionSecretToRef`](#obj-specwriteconnectionsecrettoref)
    * [`fn withName(name)`](#fn-specwriteconnectionsecrettorefwithname)
    * [`fn withNamespace(namespace)`](#fn-specwriteconnectionsecrettorefwithnamespace)

## Fields

### fn new

```ts
new(name)
```

new returns an instance of Application

## obj metadata

"ObjectMeta is metadata that all persisted resources must have, which includes all objects users must create."

### fn metadata.withAnnotations

```ts
withAnnotations(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

### fn metadata.withAnnotationsMixin

```ts
withAnnotationsMixin(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

**Note:** This function appends passed data to existing values

### fn metadata.withClusterName

```ts
withClusterName(clusterName)
```

"The name of the cluster which the object belongs to. This is used to distinguish resources with same name and namespace in different clusters. This field is not set anywhere right now and apiserver is going to ignore it if set in create or update request."

### fn metadata.withCreationTimestamp

```ts
withCreationTimestamp(creationTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withDeletionGracePeriodSeconds

```ts
withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)
```

"Number of seconds allowed for this object to gracefully terminate before it will be removed from the system. Only set when deletionTimestamp is also set. May only be shortened. Read-only."

### fn metadata.withDeletionTimestamp

```ts
withDeletionTimestamp(deletionTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withFinalizers

```ts
withFinalizers(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

### fn metadata.withFinalizersMixin

```ts
withFinalizersMixin(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

**Note:** This function appends passed data to existing values

### fn metadata.withGenerateName

```ts
withGenerateName(generateName)
```

"GenerateName is an optional prefix, used by the server, to generate a unique name ONLY IF the Name field has not been provided. If this field is used, the name returned to the client will be different than the name passed. This value will also be combined with a unique suffix. The provided value has the same validation rules as the Name field, and may be truncated by the length of the suffix required to make the value unique on the server.\n\nIf this field is specified and the generated name exists, the server will NOT return a 409 - instead, it will either return 201 Created or 500 with Reason ServerTimeout indicating a unique name could not be found in the time allotted, and the client should retry (optionally after the time indicated in the Retry-After header).\n\nApplied only if Name is not specified. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#idempotency"

### fn metadata.withGeneration

```ts
withGeneration(generation)
```

"A sequence number representing a specific generation of the desired state. Populated by the system. Read-only."

### fn metadata.withLabels

```ts
withLabels(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

### fn metadata.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

**Note:** This function appends passed data to existing values

### fn metadata.withName

```ts
withName(name)
```

"Name must be unique within a namespace. Is required when creating resources, although some resources may allow a client to request the generation of an appropriate name automatically. Name is primarily intended for creation idempotence and configuration definition. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/identifiers#names"

### fn metadata.withNamespace

```ts
withNamespace(namespace)
```

"Namespace defines the space within which each name must be unique. An empty namespace is equivalent to the \"default\" namespace, but \"default\" is the canonical representation. Not all objects are required to be scoped to a namespace - the value of this field for those objects will be empty.\n\nMust be a DNS_LABEL. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/namespaces"

### fn metadata.withOwnerReferences

```ts
withOwnerReferences(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

### fn metadata.withOwnerReferencesMixin

```ts
withOwnerReferencesMixin(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

**Note:** This function appends passed data to existing values

### fn metadata.withResourceVersion

```ts
withResourceVersion(resourceVersion)
```

"An opaque value that represents the internal version of this object that can be used by clients to determine when objects have changed. May be used for optimistic concurrency, change detection, and the watch operation on a resource or set of resources. Clients must treat these values as opaque and passed unmodified back to the server. They may only be valid for a particular resource or set of resources.\n\nPopulated by the system. Read-only. Value must be treated as opaque by clients and . More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#concurrency-control-and-consistency"

### fn metadata.withSelfLink

```ts
withSelfLink(selfLink)
```

"SelfLink is a URL representing this object. Populated by the system. Read-only.\n\nDEPRECATED Kubernetes will stop propagating this field in 1.20 release and the field is planned to be removed in 1.21 release."

### fn metadata.withUid

```ts
withUid(uid)
```

"UID is the unique in time and space value for this object. It is typically generated by the server on successful creation of a resource and is not allowed to change on PUT operations.\n\nPopulated by the system. Read-only. More info: http://kubernetes.io/docs/user-guide/identifiers#uids"

## obj spec

"ApplicationSpec defines the desired state of Application"

### fn spec.withDeletionPolicy

```ts
withDeletionPolicy(deletionPolicy)
```

"DeletionPolicy specifies what will happen to the underlying external\nwhen this managed resource is deleted - either \"Delete\" or \"Orphan\" the\nexternal resource.\nThis field is planned to be deprecated in favor of the ManagementPolicies\nfield in a future release. Currently, both could be set independently and\nnon-default values would be honored if the feature flag is enabled.\nSee the design doc for more information: https://github.com/crossplane/crossplane/blob/499895a25d1a1a0ba1604944ef98ac7a1a71f197/design/design-doc-observe-only-resources.md?plain=1#L223"

### fn spec.withManagementPolicies

```ts
withManagementPolicies(managementPolicies)
```

"THIS IS A BETA FIELD. It is on by default but can be opted out\nthrough a Crossplane feature flag.\nManagementPolicies specify the array of actions Crossplane is allowed to\ntake on the managed and external resources.\nThis field is planned to replace the DeletionPolicy field in a future\nrelease. Currently, both could be set independently and non-default\nvalues would be honored if the feature flag is enabled. If both are\ncustom, the DeletionPolicy field will be ignored.\nSee the design doc for more information: https://github.com/crossplane/crossplane/blob/499895a25d1a1a0ba1604944ef98ac7a1a71f197/design/design-doc-observe-only-resources.md?plain=1#L223\nand this one: https://github.com/crossplane/crossplane/blob/444267e84783136daa93568b364a5f01228cacbe/design/one-pager-ignore-changes.md"

### fn spec.withManagementPoliciesMixin

```ts
withManagementPoliciesMixin(managementPolicies)
```

"THIS IS A BETA FIELD. It is on by default but can be opted out\nthrough a Crossplane feature flag.\nManagementPolicies specify the array of actions Crossplane is allowed to\ntake on the managed and external resources.\nThis field is planned to replace the DeletionPolicy field in a future\nrelease. Currently, both could be set independently and non-default\nvalues would be honored if the feature flag is enabled. If both are\ncustom, the DeletionPolicy field will be ignored.\nSee the design doc for more information: https://github.com/crossplane/crossplane/blob/499895a25d1a1a0ba1604944ef98ac7a1a71f197/design/design-doc-observe-only-resources.md?plain=1#L223\nand this one: https://github.com/crossplane/crossplane/blob/444267e84783136daa93568b364a5f01228cacbe/design/one-pager-ignore-changes.md"

**Note:** This function appends passed data to existing values

## obj spec.forProvider



### fn spec.forProvider.withAppSource

```ts
withAppSource(appSource)
```

"SCM configuration of the app as described below."

### fn spec.forProvider.withAppSourceMixin

```ts
withAppSourceMixin(appSource)
```

"SCM configuration of the app as described below."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withAutoBundleOnDeploy

```ts
withAutoBundleOnDeploy(autoBundleOnDeploy)
```

"Run bundle install when deploying for application of type rails."

### fn spec.forProvider.withAwsFlowRubySettings

```ts
withAwsFlowRubySettings(awsFlowRubySettings)
```

"Specify activity and workflow workers for your app using the aws-flow gem."

### fn spec.forProvider.withDataSourceArn

```ts
withDataSourceArn(dataSourceArn)
```

"The data source's ARN."

### fn spec.forProvider.withDataSourceDatabaseName

```ts
withDataSourceDatabaseName(dataSourceDatabaseName)
```

"The database name."

### fn spec.forProvider.withDataSourceType

```ts
withDataSourceType(dataSourceType)
```

"The data source's type one of AutoSelectOpsworksMysqlInstance, OpsworksMysqlInstance, or RdsDbInstance."

### fn spec.forProvider.withDescription

```ts
withDescription(description)
```

"A description of the app."

### fn spec.forProvider.withDocumentRoot

```ts
withDocumentRoot(documentRoot)
```

"Subfolder for the document root for application of type rails."

### fn spec.forProvider.withDomains

```ts
withDomains(domains)
```

"A list of virtual host alias."

### fn spec.forProvider.withDomainsMixin

```ts
withDomainsMixin(domains)
```

"A list of virtual host alias."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withEnableSsl

```ts
withEnableSsl(enableSsl)
```

"Whether to enable SSL for the app. This must be set in order to let ssl_configuration.private_key, ssl_configuration.certificate and ssl_configuration.chain take effect."

### fn spec.forProvider.withEnvironment

```ts
withEnvironment(environment)
```

"Object to define environment variables.  Object is described below."

### fn spec.forProvider.withEnvironmentMixin

```ts
withEnvironmentMixin(environment)
```

"Object to define environment variables.  Object is described below."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withName

```ts
withName(name)
```

"A human-readable name for the application."

### fn spec.forProvider.withRailsEnv

```ts
withRailsEnv(railsEnv)
```

"The name of the Rails environment for application of type rails."

### fn spec.forProvider.withShortName

```ts
withShortName(shortName)
```

"A short, machine-readable name for the application. This can only be defined on resource creation and ignored on resource update."

### fn spec.forProvider.withSslConfiguration

```ts
withSslConfiguration(sslConfiguration)
```

"The SSL configuration of the app. Object is described below."

### fn spec.forProvider.withSslConfigurationMixin

```ts
withSslConfigurationMixin(sslConfiguration)
```

"The SSL configuration of the app. Object is described below."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withStackId

```ts
withStackId(stackId)
```

"ID of the stack the application will belong to."

### fn spec.forProvider.withType

```ts
withType(type)
```

"Opsworks application type. One of aws-flow-ruby, java, rails, php, nodejs, static or other."

## obj spec.forProvider.appSource

"SCM configuration of the app as described below."

### fn spec.forProvider.appSource.withRevision

```ts
withRevision(revision)
```

"For sources that are version-aware, the revision to use."

### fn spec.forProvider.appSource.withType

```ts
withType(type)
```

"The type of source to use. For example, \"archive\"."

### fn spec.forProvider.appSource.withUrl

```ts
withUrl(url)
```

"The URL where the app resource can be found."

### fn spec.forProvider.appSource.withUsername

```ts
withUsername(username)
```

"Username to use when authenticating to the source."

## obj spec.forProvider.appSource.passwordSecretRef

"Password to use when authenticating to the source."

### fn spec.forProvider.appSource.passwordSecretRef.withKey

```ts
withKey(key)
```

"The key to select."

### fn spec.forProvider.appSource.passwordSecretRef.withName

```ts
withName(name)
```

"Name of the secret."

### fn spec.forProvider.appSource.passwordSecretRef.withNamespace

```ts
withNamespace(namespace)
```

"Namespace of the secret."

## obj spec.forProvider.appSource.sshKeySecretRef

"SSH key to use when authenticating to the source."

### fn spec.forProvider.appSource.sshKeySecretRef.withKey

```ts
withKey(key)
```

"The key to select."

### fn spec.forProvider.appSource.sshKeySecretRef.withName

```ts
withName(name)
```

"Name of the secret."

### fn spec.forProvider.appSource.sshKeySecretRef.withNamespace

```ts
withNamespace(namespace)
```

"Namespace of the secret."

## obj spec.forProvider.environment

"Object to define environment variables.  Object is described below."

### fn spec.forProvider.environment.withKey

```ts
withKey(key)
```

"Variable name."

### fn spec.forProvider.environment.withSecure

```ts
withSecure(secure)
```

"Set visibility of the variable value to true or false."

### fn spec.forProvider.environment.withValue

```ts
withValue(value)
```

"Variable value."

## obj spec.forProvider.sslConfiguration

"The SSL configuration of the app. Object is described below."

### fn spec.forProvider.sslConfiguration.withCertificate

```ts
withCertificate(certificate)
```

"The contents of the certificate's domain.crt file."

### fn spec.forProvider.sslConfiguration.withChain

```ts
withChain(chain)
```

"Can be used to specify an intermediate certificate authority key or client authentication."

## obj spec.forProvider.sslConfiguration.privateKeySecretRef

"The private key; the contents of the certificate's domain.key file."

### fn spec.forProvider.sslConfiguration.privateKeySecretRef.withKey

```ts
withKey(key)
```

"The key to select."

### fn spec.forProvider.sslConfiguration.privateKeySecretRef.withName

```ts
withName(name)
```

"Name of the secret."

### fn spec.forProvider.sslConfiguration.privateKeySecretRef.withNamespace

```ts
withNamespace(namespace)
```

"Namespace of the secret."

## obj spec.forProvider.stackIdRef

"Reference to a Stack in opsworks to populate stackId."

### fn spec.forProvider.stackIdRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.forProvider.stackIdRef.policy

"Policies for referencing."

### fn spec.forProvider.stackIdRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.stackIdRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.forProvider.stackIdSelector

"Selector for a Stack in opsworks to populate stackId."

### fn spec.forProvider.stackIdSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference\nas the selecting object is selected."

### fn spec.forProvider.stackIdSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.forProvider.stackIdSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.stackIdSelector.policy

"Policies for selection."

### fn spec.forProvider.stackIdSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.stackIdSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.initProvider

"THIS IS A BETA FIELD. It will be honored\nunless the Management Policies feature flag is disabled.\nInitProvider holds the same fields as ForProvider, with the exception\nof Identifier and other resource reference fields. The fields that are\nin InitProvider are merged into ForProvider when the resource is created.\nThe same fields are also added to the terraform ignore_changes hook, to\navoid updating them after creation. This is useful for fields that are\nrequired on creation, but we do not desire to update them after creation,\nfor example because of an external controller is managing them, like an\nautoscaler."

### fn spec.initProvider.withAppSource

```ts
withAppSource(appSource)
```

"SCM configuration of the app as described below."

### fn spec.initProvider.withAppSourceMixin

```ts
withAppSourceMixin(appSource)
```

"SCM configuration of the app as described below."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.withAutoBundleOnDeploy

```ts
withAutoBundleOnDeploy(autoBundleOnDeploy)
```

"Run bundle install when deploying for application of type rails."

### fn spec.initProvider.withAwsFlowRubySettings

```ts
withAwsFlowRubySettings(awsFlowRubySettings)
```

"Specify activity and workflow workers for your app using the aws-flow gem."

### fn spec.initProvider.withDataSourceArn

```ts
withDataSourceArn(dataSourceArn)
```

"The data source's ARN."

### fn spec.initProvider.withDataSourceDatabaseName

```ts
withDataSourceDatabaseName(dataSourceDatabaseName)
```

"The database name."

### fn spec.initProvider.withDataSourceType

```ts
withDataSourceType(dataSourceType)
```

"The data source's type one of AutoSelectOpsworksMysqlInstance, OpsworksMysqlInstance, or RdsDbInstance."

### fn spec.initProvider.withDescription

```ts
withDescription(description)
```

"A description of the app."

### fn spec.initProvider.withDocumentRoot

```ts
withDocumentRoot(documentRoot)
```

"Subfolder for the document root for application of type rails."

### fn spec.initProvider.withDomains

```ts
withDomains(domains)
```

"A list of virtual host alias."

### fn spec.initProvider.withDomainsMixin

```ts
withDomainsMixin(domains)
```

"A list of virtual host alias."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.withEnableSsl

```ts
withEnableSsl(enableSsl)
```

"Whether to enable SSL for the app. This must be set in order to let ssl_configuration.private_key, ssl_configuration.certificate and ssl_configuration.chain take effect."

### fn spec.initProvider.withEnvironment

```ts
withEnvironment(environment)
```

"Object to define environment variables.  Object is described below."

### fn spec.initProvider.withEnvironmentMixin

```ts
withEnvironmentMixin(environment)
```

"Object to define environment variables.  Object is described below."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.withName

```ts
withName(name)
```

"A human-readable name for the application."

### fn spec.initProvider.withRailsEnv

```ts
withRailsEnv(railsEnv)
```

"The name of the Rails environment for application of type rails."

### fn spec.initProvider.withShortName

```ts
withShortName(shortName)
```

"A short, machine-readable name for the application. This can only be defined on resource creation and ignored on resource update."

### fn spec.initProvider.withSslConfiguration

```ts
withSslConfiguration(sslConfiguration)
```

"The SSL configuration of the app. Object is described below."

### fn spec.initProvider.withSslConfigurationMixin

```ts
withSslConfigurationMixin(sslConfiguration)
```

"The SSL configuration of the app. Object is described below."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.withStackId

```ts
withStackId(stackId)
```

"ID of the stack the application will belong to."

### fn spec.initProvider.withType

```ts
withType(type)
```

"Opsworks application type. One of aws-flow-ruby, java, rails, php, nodejs, static or other."

## obj spec.initProvider.appSource

"SCM configuration of the app as described below."

### fn spec.initProvider.appSource.withRevision

```ts
withRevision(revision)
```

"For sources that are version-aware, the revision to use."

### fn spec.initProvider.appSource.withType

```ts
withType(type)
```

"The type of source to use. For example, \"archive\"."

### fn spec.initProvider.appSource.withUrl

```ts
withUrl(url)
```

"The URL where the app resource can be found."

### fn spec.initProvider.appSource.withUsername

```ts
withUsername(username)
```

"Username to use when authenticating to the source."

## obj spec.initProvider.appSource.passwordSecretRef

"Password to use when authenticating to the source."

### fn spec.initProvider.appSource.passwordSecretRef.withKey

```ts
withKey(key)
```

"The key to select."

### fn spec.initProvider.appSource.passwordSecretRef.withName

```ts
withName(name)
```

"Name of the secret."

### fn spec.initProvider.appSource.passwordSecretRef.withNamespace

```ts
withNamespace(namespace)
```

"Namespace of the secret."

## obj spec.initProvider.appSource.sshKeySecretRef

"SSH key to use when authenticating to the source."

### fn spec.initProvider.appSource.sshKeySecretRef.withKey

```ts
withKey(key)
```

"The key to select."

### fn spec.initProvider.appSource.sshKeySecretRef.withName

```ts
withName(name)
```

"Name of the secret."

### fn spec.initProvider.appSource.sshKeySecretRef.withNamespace

```ts
withNamespace(namespace)
```

"Namespace of the secret."

## obj spec.initProvider.environment

"Object to define environment variables.  Object is described below."

### fn spec.initProvider.environment.withKey

```ts
withKey(key)
```

"Variable name."

### fn spec.initProvider.environment.withSecure

```ts
withSecure(secure)
```

"Set visibility of the variable value to true or false."

### fn spec.initProvider.environment.withValue

```ts
withValue(value)
```

"Variable value."

## obj spec.initProvider.sslConfiguration

"The SSL configuration of the app. Object is described below."

### fn spec.initProvider.sslConfiguration.withCertificate

```ts
withCertificate(certificate)
```

"The contents of the certificate's domain.crt file."

### fn spec.initProvider.sslConfiguration.withChain

```ts
withChain(chain)
```

"Can be used to specify an intermediate certificate authority key or client authentication."

## obj spec.initProvider.sslConfiguration.privateKeySecretRef

"The private key; the contents of the certificate's domain.key file."

### fn spec.initProvider.sslConfiguration.privateKeySecretRef.withKey

```ts
withKey(key)
```

"The key to select."

### fn spec.initProvider.sslConfiguration.privateKeySecretRef.withName

```ts
withName(name)
```

"Name of the secret."

### fn spec.initProvider.sslConfiguration.privateKeySecretRef.withNamespace

```ts
withNamespace(namespace)
```

"Namespace of the secret."

## obj spec.initProvider.stackIdRef

"Reference to a Stack in opsworks to populate stackId."

### fn spec.initProvider.stackIdRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.initProvider.stackIdRef.policy

"Policies for referencing."

### fn spec.initProvider.stackIdRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.initProvider.stackIdRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.initProvider.stackIdSelector

"Selector for a Stack in opsworks to populate stackId."

### fn spec.initProvider.stackIdSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference\nas the selecting object is selected."

### fn spec.initProvider.stackIdSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.initProvider.stackIdSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.initProvider.stackIdSelector.policy

"Policies for selection."

### fn spec.initProvider.stackIdSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.initProvider.stackIdSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.providerConfigRef

"ProviderConfigReference specifies how the provider that will be used to\ncreate, observe, update, and delete this managed resource should be\nconfigured."

### fn spec.providerConfigRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.providerConfigRef.policy

"Policies for referencing."

### fn spec.providerConfigRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.providerConfigRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.publishConnectionDetailsTo

"PublishConnectionDetailsTo specifies the connection secret config which\ncontains a name, metadata and a reference to secret store config to\nwhich any connection details for this managed resource should be written.\nConnection details frequently include the endpoint, username,\nand password required to connect to the managed resource."

### fn spec.publishConnectionDetailsTo.withName

```ts
withName(name)
```

"Name is the name of the connection secret."

## obj spec.publishConnectionDetailsTo.configRef

"SecretStoreConfigRef specifies which secret store config should be used\nfor this ConnectionSecret."

### fn spec.publishConnectionDetailsTo.configRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.publishConnectionDetailsTo.configRef.policy

"Policies for referencing."

### fn spec.publishConnectionDetailsTo.configRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.publishConnectionDetailsTo.configRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.publishConnectionDetailsTo.metadata

"Metadata is the metadata for connection secret."

### fn spec.publishConnectionDetailsTo.metadata.withAnnotations

```ts
withAnnotations(annotations)
```

"Annotations are the annotations to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.annotations\".\n- It is up to Secret Store implementation for others store types."

### fn spec.publishConnectionDetailsTo.metadata.withAnnotationsMixin

```ts
withAnnotationsMixin(annotations)
```

"Annotations are the annotations to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.annotations\".\n- It is up to Secret Store implementation for others store types."

**Note:** This function appends passed data to existing values

### fn spec.publishConnectionDetailsTo.metadata.withLabels

```ts
withLabels(labels)
```

"Labels are the labels/tags to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.labels\".\n- It is up to Secret Store implementation for others store types."

### fn spec.publishConnectionDetailsTo.metadata.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"Labels are the labels/tags to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.labels\".\n- It is up to Secret Store implementation for others store types."

**Note:** This function appends passed data to existing values

### fn spec.publishConnectionDetailsTo.metadata.withType

```ts
withType(type)
```

"Type is the SecretType for the connection secret.\n- Only valid for Kubernetes Secret Stores."

## obj spec.writeConnectionSecretToRef

"WriteConnectionSecretToReference specifies the namespace and name of a\nSecret to which any connection details for this managed resource should\nbe written. Connection details frequently include the endpoint, username,\nand password required to connect to the managed resource.\nThis field is planned to be replaced in a future release in favor of\nPublishConnectionDetailsTo. Currently, both could be set independently\nand connection details would be published to both without affecting\neach other."

### fn spec.writeConnectionSecretToRef.withName

```ts
withName(name)
```

"Name of the secret."

### fn spec.writeConnectionSecretToRef.withNamespace

```ts
withNamespace(namespace)
```

"Namespace of the secret."